<resources>
    <string name="app_name">Coffee Order</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="login">Đăng nhập</string>
    <string name="loginplease">Vui lòng đăng nhập</string>
    <string name="all">Tất cả</string>
    <string name="busy">Đang bận</string>
    <string name="tam_tinh">Tạm tính</string>
    <string name="tam_tinh_and_busy">Bận &amp; Tạm tính</string>
    <string name="free">Trống</string>
    <string name="by_floor">Theo phòng</string>
    <string name="plus">&gt;&gt;</string>
    <string name="coffee">Coffee</string>
    <string name="list_of_ordered_menu">Danh sách các món đã đặt</string>
    <string name="customer_card">Mặc định</string>
    <string name="optional_card_no">Tùy chọn</string>
    <string name="customerCardNoHint">Thẻ khách hàng</string>
    <string name="ok">OK</string>
    <string name="cancel">Hủy</string>
    <string name="default_description">Image</string>
    <string name="search_customer">Tìm kiếm khách hàng</string>
    <string name="input_notes">Nhập ghi chú</string>
    <string name="destroyCard">Hủy thẻ</string>
    <string name="default_ip_address">192.168.0.102</string>
    <string name="ip_address">IP Address</string>
    <string name="menu_find">Tìm kiếm menu</string>
    <string name="merge">Gộp vào</string>
    <string name="spinner_title">Chọn bàn để gộp</string>
    <string name="quantity">Số lượng</string>
    <string name="paid">Thanh toán</string>
    <string name="extra_paid">Phụ thêm</string>
    <string name="myname">Coffee Order Android</string>
    <string name="paid_all">Hết</string>
    <string name="version">Version: 1.1</string>
    <string name="company_name">Company: TMT Solutions</string>
    <string name="website">Website: <a href="www.truongminhthinh.com">www.truongminhthinh.com</a></string>
    <string name="phone">Phone: 090807 5455</string>
    <string name="view_outside">All</string>
    <string name="detail">Chi tiết</string>
    <string name="total">Tổng:</string>
    <string name="remain">Thối lại:</string>
    <string name="title_activity_oder_item">Phiếu in</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_0">0</string>
    <string name="num_dot">.</string>
    <string name="order_colon">Đặt:</string>
    <string name="quantity_colon">Tồn kho:</string>
    <string name="actions">Tác vụ</string>
    <string name="add">Thêm</string>
    <string name="remove">Bớt</string>
    <string name="edit_note">Sửa ghi chú</string>
    <string name="transfer">Chuyển</string>
    <string name="split">Tách</string>
    <string name="clear">Hủy</string>
    <string name="textOn">ON</string>
    <string name="textOff">OFF</string>
    <string name="remember_me">Nhớ mật khẩu</string>
    <string name="account">Account:</string>
    <string name="title_activity_select_number">SelectNumberActivity</string>
    <string name="select_number_of_item_to_transfer">Chọn số lượng món để chuyển</string>
    <string name="select_number_of_item_to_split">Chọn số lượng món sẽ tách</string>
    <string name="paid_only">Chỉ thanh toán</string>
    <string name="paid_and_print">Thanh toán và in</string>
    <string name="available">Trống</string>
    <string name="menu">Menu</string>
    <string name="starred">Starred</string>
    <string name="recent">Recent</string>
    <string name="no">Không</string>
    <string name="yes">Có</string>
    <string name="num_plus_ten">+10</string>
    <plurals name="item_quantity">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>
</resources>
